--- a/src/app/sights/list/list.component.html
+++ b/src/app/sights/list/list.component.html
@@ -1,39 +1,48 @@
-<mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
-
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
-
-    <ng-container matColumnDef="label">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Label </th>
-      <td mat-cell *matCellDef="let row"> {{row.label}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="mapCoordLat">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Latitude </th>
-      <td mat-cell *matCellDef="let row"> {{row.mapCoordLat}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="mapCoordLong">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Longitude </th>
-      <td mat-cell *matCellDef="let row"> {{row.mapCoordLong}} </td>
-    </ng-container>
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-      <td mat-cell *matCellDef="let row"> {{row.description}} </td>
-    </ng-container>
+<div class="container" fxFlex fxLayout="column" fxLayoutAlign="center center">
+    <div fxLayout="row" fxLayoutGap="15%">
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search in label">
+    </mat-form-field>
+    </div>
 
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-    </tr>
-  </table>
+        <div *ngIf="!dataSource.filteredData.length" fxLayout="column" fxLayoutAlign="center">
+            No data found
+        </div>
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)"
+               *ngIf="dataSource.filteredData.length"
+               fxLayout="column" fxLayoutAlign="center">
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"
-                 [length]="page.totalElements"
-                 [pageSize]="page.pageSize"
-                 (page)="updatePage($event)">
+            <ng-container matColumnDef="label">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Label</th>
+                <td mat-cell *matCellDef="let row"> {{row.label}}</td>
+            </ng-container>
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef> Description</th>
+                <td mat-cell *matCellDef="let row"> {{row.description}}</td>
+            </ng-container>
+            <ng-container matColumnDef="latitude">
+                <th mat-header-cell *matHeaderCellDef> Latitude</th>
+                <td mat-cell *matCellDef="let row"> {{row.latitude}}</td>
+            </ng-container>
+            <ng-container matColumnDef="longitude">
+                <th mat-header-cell *matHeaderCellDef> Longitude</th>
+                <td mat-cell *matCellDef="let row"> {{row.longitude}}</td>
+            </ng-container>
+            <ng-container matColumnDef="visits">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Visits</th>
+                <td mat-cell *matCellDef="let row"> {{row.sightVisitsCounter.counter}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+            </tr>
+        </table>
 
-  </mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"
+                       [length]="page.totalElements"
+                       [pageSize]="page.pageSize"
+                       (page)="updatePage($event)">
+
+        </mat-paginator>
+
 </div>
