--- a/src/app/sights/list/list.component.css
+++ b/src/app/sights/list/list.component.css
@@ -5,7 +5,10 @@ table {
 .mat-form-field {
     font-size: 14px;
 }
-
+:host /deep/ .mat-sort-header-container:not(.mat-sort-header-sorted) .mat-sort-header-arrow {
+    opacity: 0.54 !important;
+    transform: translateY(0px) !important;
+}
 td, th {
     width: 25%;
 }
