--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -14,7 +14,7 @@
             <fa-icon [icon]="['fas', 'cogs']" size="lg"></fa-icon>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item routerLink="/save-post">
+            <button mat-menu-item routerLink="/save-post/{{post.postId}}">
                 <fa-icon [icon]="['fas', 'edit']" size="lg"></fa-icon>
                 Edit
             </button>
