--- a/src/app/sights/map/map.component.html
+++ b/src/app/sights/map/map.component.html
@@ -3,7 +3,7 @@
         <p>Zoom: {{map.getZoom()}}</p>
         <p>{{map.getCenter()}}</p>
     </div>
-    <div id="map"  fxFlex="1 1 75%">
+    <div id="map" class="content" fxFlex="1 1 75%">
 
     </div>
 </div>
