--- a/src/app/save-post/save-post.component.html
+++ b/src/app/save-post/save-post.component.html
@@ -14,6 +14,7 @@
         </div>
     </div>
     <div class="content" fxFlex="75%">
+        <div id="map"></div>
         <form [formGroup]="savePostForm" (submit)="save()">
             <mat-form-field>
                 <input matInput placeholder="Title" formControlName="title" required>
