Fixed some css classes names

--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -1,4 +1,4 @@
-.post-main-div {
+.container {
     border-top: 2px solid #49aa3c;
     background: linear-gradient(45deg, rgb(228, 240, 121), rgb(142, 226, 93));
 }
