--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,5 +1,5 @@
-<div class="post-main-div" fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center">
-    <div class="global-container">
+<div class="container" fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center">
+    <div>
         <div fxLayout="row wrap">
             <div class="search" fxFlex fxLayoutAlign="start center" fxLayoutGap="25px">
                 <input list="authors" class="search-data" name="author" spellcheck="false"
