--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -3,29 +3,28 @@
         <div fxLayout="row wrap">
             <div class="search" fxFlex fxLayoutAlign="start center" fxLayoutGap="25px">
 
-                    <mat-form-field>
-                        <input type="text" placeholder="{{'SEARCH.SIGHT' | translate}}"
-                               matInput [formControl]="sightSearchControl"
-                               [matAutocomplete]="auto">
-                        <mat-autocomplete #auto="matAutocomplete">
-                            <mat-option *ngIf="isFilterDataLoading" class="is-loading">Loading...</mat-option>
-                            <ng-container *ngIf="!isFilterDataLoading">
-                                <mat-option *ngFor="let sight of filteredSights" [value]="sight.label">
-                                    <span><b>{{sight.label}}</b></span> |
-                                    <small>Visited {{sight.sightVisitsCounter.counter}} times</small>
-                                </mat-option>
-                            </ng-container>
-                        </mat-autocomplete>
-                    </mat-form-field>
-                    <ng-container *ngIf="filterErrorMessage">
-                        {{filterErrorMessage}}
-                    </ng-container>
+                <!-- Search by sight -->
+                <mat-form-field>
+                    <input type="text" placeholder="{{'SEARCH.SIGHT' | translate}}"
+                           matInput [formControl]="sightSearchControl"
+                           [matAutocomplete]="autoSight">
+                    <mat-autocomplete #autoSight="matAutocomplete">
+                        <mat-option *ngIf="isFilterDataLoading" class="is-loading">Loading...</mat-option>
+                        <ng-container *ngIf="!isFilterDataLoading">
+                            <mat-option *ngFor="let sight of filteredSights" [value]="sight.label">
+                                <span><b>{{sight.label}}</b></span> |
+                                <small>Visited {{sight.sightVisitsCounter.counter}} times</small>
+                            </mat-option>
+                        </ng-container>
+                    </mat-autocomplete>
+                </mat-form-field>
 
+                <!-- Search by author -->
                 <mat-form-field>
                     <input type="text" placeholder="{{'SEARCH.AUTHOR' | translate}}"
                            matInput [formControl]="authorSearchControl"
-                           [matAutocomplete]="auto">
-                    <mat-autocomplete #auto="matAutocomplete">
+                           [matAutocomplete]="autoAuthor">
+                    <mat-autocomplete #autoAuthor="matAutocomplete">
                         <mat-option *ngIf="isFilterDataLoading" class="is-loading">Loading...</mat-option>
                         <ng-container *ngIf="!isFilterDataLoading">
                             <mat-option *ngFor="let author of filteredAuthors" [value]="author.username">
@@ -34,43 +33,24 @@
                         </ng-container>
                     </mat-autocomplete>
                 </mat-form-field>
-                <ng-container *ngIf="filterErrorMessage">
-                    {{filterErrorMessage}}
-                </ng-container>
 
-                <input list="authors" class="search-data" name="author" spellcheck="false"
-                       placeholder="{{'SEARCH.AUTHOR' | translate}}">
-                <datalist id="authors">
-                    <option value="Jožin z Bažin">
-                    <option value="Amber Valentine">
-                    <option value="Bilbo Baggins">
-                    <option value="Xu Xin">
-                    <option value="Crazy Midnight Dancer">
-                    <option value="Disco Superstar">
-                    <option value="Ponchik de Buffet">
-                    <option value="Rumpelstilzchen">
-                </datalist>
-                <input list="sights" class="search-data" name="sight" spellcheck="false"
-                       placeholder="{{'SEARCH.SIGHT' | translate}}">
-                <datalist id="sights">
-                    <option value="Paris">
-                    <option value="London">
-                    <option value="New-York">
-                    <option value="Podjezd #3">
-                    <option value="Jídelna 'U trí švábů'">
-                    <option value="Bažina">
-                </datalist>
-                <input list="sorting" class="search-data" name="sorting" spellcheck="false"
-                       placeholder="{{'SORT.NOT_SELECTED' | translate}}">
-                <datalist id="sorting">
-                    <option value="{{'SORT.NEWEST' | translate}}">
-                    <option value="{{'SORT.OLDEST' | translate}}">
-                </datalist>
-                <mat-form-field class="search-form">
-                    <input matInput autocomplete="off" spellcheck="false" placeholder="Search" type="text">
+                <!-- Sort -->
+                <mat-form-field>
+                    <mat-label>{{'SORT.NOT_SELECTED' | translate}}</mat-label>
+                    <mat-select [(value)]="selectedSort">
+                        <mat-option value="none">{{'SORT.NOT_SELECTED' | translate}}</mat-option>
+                        <mat-option value="oldest">{{'SORT.OLDEST' | translate}}</mat-option>
+                        <mat-option value="newest">{{'SORT.NEWEST' | translate}}</mat-option>
+                    </mat-select>
                 </mat-form-field>
+
+
+
                 <button button="submit" mat-raised-button (click)="searchPosts()">
                     <fa-icon [icon]="['fas', 'search']" size="lg"></fa-icon>
+                </button>
+                <button button="submit" mat-raised-button (click)="resetSearch()">
+                    <fa-icon [icon]="['fas', 'window-close']" size="lg"></fa-icon>
                 </button>
             </div>
 
@@ -138,8 +118,9 @@
                     [length]="page.totalElements"
                     [pageSize]="page.pageSize"
                     [pageSizeOptions]="[5, 12, 24]"
-                    (page)="updatePage($event)">
+                    (page)="loadPage($event)">
             </mat-paginator>
         </div>
+        <div *ngIf="posts.length === 0">Posts not found</div>
     </div>
 </div>
