Fixed some variable names

--- a/src/app/save-post/save-post.component.html
+++ b/src/app/save-post/save-post.component.html
@@ -18,7 +18,7 @@
         <!-- Map area -->
         <div id="map"></div>
 
-        <form [formGroup]="savePostForm" (submit)="save()">
+        <form [formGroup]="savePostForm" (submit)="savePost()">
 
             <!-- Title -->
             <mat-form-field>
