--- a/src/app/sights/list/list.component.html
+++ b/src/app/sights/list/list.component.html
@@ -40,7 +40,7 @@
 
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"
                        [length]="page.totalElements"
-                       [pageSize]="page.pageSize"
+                       [pageSize]="page.size"
                        (page)="updatePage($event)">
 
         </mat-paginator>
