Added logging message for checking injection in production

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -116,7 +116,7 @@
         <div fxLayout="row" fxLayoutAlign="center" *ngIf="posts?.length">
             <mat-paginator
                     [length]="page.totalElements"
-                    [pageSize]="page.pageSize"
+                    [pageSize]="page.size"
                     [pageSizeOptions]="[5, 12, 24]"
                     (page)="loadPage($event)">
             </mat-paginator>
