Updated menu links

--- a/src/app/sights/sights.component.html
+++ b/src/app/sights/sights.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-<ul>
-    <li><a routerLink = "map" routerLinkActive="active-link">Map</a></li>
-    <li><a routerLink = "list" routerLinkActive="active-link">List2</a></li>
-</ul>
+    <ul>
+        <li><a routerLink="map" routerLinkActive="active-link">Map</a></li>
+        <li><a routerLink="list" routerLinkActive="active-link">List</a></li>
+    </ul>
     <router-outlet></router-outlet>
 </div>
