--- a/src/app/sights/sights.component.css
+++ b/src/app/sights/sights.component.css
@@ -2,3 +2,6 @@
     border-top: 2px solid #49aa3c;
     background: linear-gradient(45deg, rgb(228, 240, 121), rgb(142, 226, 93));
 }
+ul {
+    list-style-type:none;
+}
