Added deleting posts functionality and button for creating new post

--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -18,7 +18,7 @@
                     <fa-icon [icon]="['fas', 'edit']" size="lg"></fa-icon>
                     Edit
                 </button>
-                <button mat-menu-item>
+                <button mat-menu-item (click)="deletePost()">
                     <fa-icon [icon]="['fas', 'trash-alt']" size="lg"></fa-icon>
                     Remove
                 </button>
