--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -97,14 +97,13 @@
     bottom: 10px;
     right: 16px;
 }*/
-.card-item mat-card-actions button:hover {
+.card-item .mat-card-actions button:hover {
     background: #af9f1457;
     color: white;
 }
-mat-paginator {
+.mat-paginator {
     background: none;
 }
-/* .mat-table {
-    overflow: auto;
-    max-height: 500px;
-} */
+.create-post-btn {
+    margin-left: 5%;
+}
